// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Tabs BasicUsage renders 1`] = `
<Fragment>
  <h2
    id="basic-usage"
  >
    Basic usage
  </h2>
  <p>
    Add class 
    <code
      className="token property"
    >
      .tabs
    </code>
     with a 
    <code
      className="token property"
    >
      .tabs-horizontal-desired_size
    </code>
     to a div containing an arrow icon along with 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;ul&gt;
    </PrismCode>
     and nest 
    <PrismCode
      className="language-html"
      component="code"
    >
      &lt;li&gt;
    </PrismCode>
     as needed. The 
    <code
      className="token property"
    >
      .tabs-horizontal-desired_size
    </code>
     class determines when your tabs will switch from horizontal to collapsed. The available sizes can be found in our 
    <Link
      replace={false}
      to="/docs/core/breakpoints"
    >
      breakpoints documentation
    </Link>
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Tabs
      items={
        Array [
          Object {
            "name": "Kort",
          },
          Object {
            "name": "Transaksjoner",
          },
          Object {
            "active": true,
            "name": "Faktura",
          },
          Object {
            "name": "Instillinger",
          },
          Object {
            "name": "Audit trail",
          },
        ]
      }
      mode="xl"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Tabs Collapsed renders 1`] = `
<Fragment>
  <h2
    id="collapsed"
  >
    Collapsed
  </h2>
  <p>
    If no 
    <code
      className="token property"
    >
      .tabs-horizontal-desired_size
    </code>
     is provided then the tabs will always be in collapsed mode.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Tabs
      items={
        Array [
          Object {
            "name": "Kort",
          },
          Object {
            "name": "Transaksjoner",
          },
          Object {
            "active": true,
            "name": "Faktura",
          },
          Object {
            "name": "Instillinger",
          },
          Object {
            "name": "Audit trail",
          },
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Tabs TabsText renders 1`] = `
<div
  className="col-md-12 col-lg-10 doc-body"
>
  <ExperimentalComponentAlert />
  <p
    className="lead"
  >
    Tabs...
  </p>
  <BasicUsage />
  <Collapsed />
</div>
`;

exports[`Components: Tabs renders 1`] = `
<div
  className="doc-container"
>
  <div
    className="row"
  >
    <TabsText />
    <DocToc
      component={[Function]}
    />
  </div>
</div>
`;
